# ChangeLog for sys-fs/unionfs
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/unionfs/Attic/ChangeLog,v 1.28 2006/11/22 19:53:22 dberkholz Exp $

*unionfs-1.4 (22 Nov 2006)

  22 Nov 2006; Donnie Berkholz <dberkholz@gentoo.org>; +unionfs-1.4.ebuild:
  (#152813, #154810) Bump, with slight mods (Markus Ullmann, Harm Geerts).

  22 Oct 2006; Sven Wegener <swegener@gentoo.org> unionfs-1.3.ebuild:
  Set UNIONFS_OPT_CFLAG to CFLAGS.

  25 Sep 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  +files/1.3-64bit_compile_fix.diff, unionfs-1.3.ebuild:
  (#142517) Compile on amd64. (#144326) Install man pages to the right place.

*unionfs-1.3 (01 Aug 2006)
*unionfs-1.2 (01 Aug 2006)
*unionfs-1.1.5 (01 Aug 2006)

  01 Aug 2006; Christian Andreetta <satya@gentoo.org> -unionfs-1.1.2.ebuild,
  -unionfs-1.1.3.ebuild, -unionfs-1.1.3-r1.ebuild, -unionfs-1.1.4.ebuild,
  -unionfs-1.1.4-r1.ebuild, +unionfs-1.1.5.ebuild, +unionfs-1.2.ebuild,
  +unionfs-1.3.ebuild:
  Old ebuilds cleanup. Version bump (bug #142332)

  31 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  satya's leaving, add cluster herd as primary.

  09 May 2006; Christian Andreetta <satya@gentoo.org>
  unionfs-1.1.4-r2.ebuild:
  modules in .../kernel/fs/unionfs/, binaries in /sbin (bug #129960)

*unionfs-1.1.4-r2 (27 Apr 2006)

  27 Apr 2006; Christian Andreetta <satya@gentoo.org>
  +unionfs-1.1.4-r2.ebuild:
  make option -DUNIONFS_UNSUPPORTED for kernel>=2.6.16 (bug #129744)

*unionfs-1.1.4-r1 (13 Apr 2006)

  13 Apr 2006; Christian Andreetta <satya@gentoo.org>
  +unionfs-1.1.4-r1.ebuild:
  1.1.4-r1: upstream didn't indlude mutex patch...

*unionfs-1.1.4 (12 Apr 2006)

  12 Apr 2006; Christian Andreetta <satya@gentoo.org> +unionfs-1.1.4.ebuild:
  unionfs 1.1.4 version bump

*unionfs-1.1.3-r1 (04 Apr 2006)

  04 Apr 2006; Christian Andreetta <satya@gentoo.org>
  -files/unionfs-1.0.11-amd64.patch,
  -files/unionfs-1.0.13-delbranch-fix.patch,