@@ -20,6 +20,7 @@ DIST unionfs-1.1.5.tar.gz 153220 RMD160 892147d454685e0a1a625a6c127d195e3b71c2fd
 DIST unionfs-1.2.tar.gz 160392 RMD160 610dd05ab56720ecb3a670a06a82935e489775b4 SHA256 0b69c4dcd623cbd7416121da04c966395f2f4e24a0e2dd0cc841c2850ad63eb3
 DIST unionfs-1.3.tar.gz 162909 RMD160 40e437d626890e5ec2bcbe1a5caf35e3c4038805 SHA256 1bf09c400fd7b3061eee0096ee0222434927d621b3bd35b01913f3e7d8079917
 DIST unionfs-1.4.tar.gz 164696 RMD160 5a19ccfd6edf25f55c48ba1b820347572353c7ba SHA1 746fe5b9d6348e6530a85b38cdb8a8e08f513264 SHA256 3ff105782aba722b1f263e408fac638245d302a9c8d0f37ac09e5a80caf0126b
+DIST unionfs-1.5pre-cvs200701042308.tar.gz 163418 RMD160 6d54be6db26a562dd943df2de9cf0e0138c45c6f SHA1 9559a0ae8e0552a9c3644c85a99c1be601c837fc SHA256 d1925eee22517df72828a7c75890c20a54335e135f6ed04ea43f8771c9b1c271
 EBUILD unionfs-1.0.14.ebuild 1380 RMD160 638c88ed3a30dbb869be33dbb5e797243b87e5a6 SHA1 5a7bf10e573b40c232b669c9b0799e9ff81a083a SHA256 241b993a63f479857e1605a314cec0af4394904f9d5109bb60be30e9f8c9b41b
 MD5 3262d5486fbdc93bf0ec35f815046896 unionfs-1.0.14.ebuild 1380
 RMD160 638c88ed3a30dbb869be33dbb5e797243b87e5a6 unionfs-1.0.14.ebuild 1380
@@ -44,10 +45,14 @@ EBUILD unionfs-1.4.ebuild 2095 RMD160 56c482dfd232ab985576a4d53e700a25b2d0cda1 S
 MD5 6dc863158fd378bc10fd2e956a256723 unionfs-1.4.ebuild 2095
 RMD160 56c482dfd232ab985576a4d53e700a25b2d0cda1 unionfs-1.4.ebuild 2095
 SHA256 87f2e446e10306461e1c7f7d31962b9b14e1f88400f6aa975f87e910f9766b23 unionfs-1.4.ebuild 2095
-MISC ChangeLog 5899 RMD160 912585f26e770b8334e891985d3b37397df54658 SHA1 4bbd4ff3f1e541218ccc859ccf0d9b7e7d956514 SHA256 9fe57427d6f746456766d7921981fb60dfd99ce33b8c1f0f4f8c419e466bbda7
-MD5 d9a5bda1d8bcac36d25afd8e032ca9d5 ChangeLog 5899
-RMD160 912585f26e770b8334e891985d3b37397df54658 ChangeLog 5899
-SHA256 9fe57427d6f746456766d7921981fb60dfd99ce33b8c1f0f4f8c419e466bbda7 ChangeLog 5899
+EBUILD unionfs-1.5_pre200701042308.ebuild 2348 RMD160 448eab98ea9816e209946f8781daf353d5a80c4e SHA1 536213b081c6ce578e55e3df41ececbf3f5d4444 SHA256 ebc25d5f70dded83400268c8ae0d90eb8f6b504098726eb6f3fdfe947e9817d7
+MD5 f176061ae1de90d4db5fdc4d4a9407ee unionfs-1.5_pre200701042308.ebuild 2348
+RMD160 448eab98ea9816e209946f8781daf353d5a80c4e unionfs-1.5_pre200701042308.ebuild 2348
+SHA256 ebc25d5f70dded83400268c8ae0d90eb8f6b504098726eb6f3fdfe947e9817d7 unionfs-1.5_pre200701042308.ebuild 2348
+MISC ChangeLog 6079 RMD160 0d700b334a1eb12af1d4ee06d54349ea09c766bf SHA1 c5190cb0a2b8e90c72cf09f3ff4f870beb3315bb SHA256 25e959e0ce41b5437069b602abfaaf855ca9e45c7009589cf2151b52c140f4be
+MD5 b3f109fae7b5b24ba27f38177ed7bb2f ChangeLog 6079
+RMD160 0d700b334a1eb12af1d4ee06d54349ea09c766bf ChangeLog 6079
+SHA256 25e959e0ce41b5437069b602abfaaf855ca9e45c7009589cf2151b52c140f4be ChangeLog 6079
 MISC metadata.xml 184 RMD160 bcc1ecba39e558a0dc461bd8348c943197a6c027 SHA1 7cae5b277af458ff28858ca3ce73590842a38b78 SHA256 831be5eac9849398e0dbc9aedcad5aa37267e91bdacbb6a7b28cc38e5fdd611b
 MD5 b2b42f14a80c6926e530979d9e2f3e1b metadata.xml 184
 RMD160 bcc1ecba39e558a0dc461bd8348c943197a6c027 metadata.xml 184
@@ -70,3 +75,6 @@ SHA256 ffb39d19d852a44a2eff2b9d64aa990ac19f26bfb9b94fe3df960f91c00d2cab files/di
 MD5 5c4e22af43b7d07167d1a55ece05c7de files/digest-unionfs-1.4 235
 RMD160 7c62add63c773b4849287380a2e4c190514606bd files/digest-unionfs-1.4 235
 SHA256 378583db0c92c79ef807cf1030888d902baf230c6e8ac4831c2474e07cb90634 files/digest-unionfs-1.4 235
+MD5 98689791fb854f771cd3b5bd9559f252 files/digest-unionfs-1.5_pre200701042308 292
+RMD160 9f1bb5e8bc52daefbe84649c034cd692a7012a01 files/digest-unionfs-1.5_pre200701042308 292
+SHA256 da1c2c35e6382b28285cf7553c59b7d11dbb89a69131231cdde391126425b6c9 files/digest-unionfs-1.5_pre200701042308 292
