@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/unionfs
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/unionfs/Attic/ChangeLog,v 1.28 2006/11/22 19:53:22 dberkholz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/unionfs/Attic/ChangeLog,v 1.29 2007/01/07 19:19:39 dberkholz Exp $
+
+*unionfs-1.5_pre200701042308 (07 Jan 2007)
+
+  07 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>;
+  +unionfs-1.5_pre200701042308.ebuild:
+  Bump for a 2.6.19-compatible snapshot.
 
 *unionfs-1.4 (22 Nov 2006)
 
